RESOLVED FIXED 73431
[Gtk] atk_text_get_text_at_offset() fails to provide the correct line for list items whose text wraps
https://bugs.webkit.org/show_bug.cgi?id=73431
Summary [Gtk] atk_text_get_text_at_offset() fails to provide the correct line for lis...
Joanmarie Diggs
Reported 2011-11-30 04:46:43 PST
Created attachment 117169 [details] test case Steps to reproduce: 1. View the attached test case in WK1 2. Resize the window so that the text wraps 3. Enable caret browsing 4. Launch the attached test script in a terminal 5. Arrow Up and Down amongst the lines of text Expected results: The test script would always print the correct text for the current line. Actual results: The test script only presents the correct text for the current line for the paragraph; the list item text is off by a couple of characters. I believe this is a regression.
Attachments
test case (195 bytes, text/html)
2011-11-30 04:46 PST, Joanmarie Diggs
no flags
test script (439 bytes, text/plain)
2011-11-30 04:47 PST, Joanmarie Diggs
no flags
Patch proposal (8.18 KB, patch)
2012-01-17 04:54 PST, Mario Sanchez Prada
no flags
Patch proposal (8.19 KB, patch)
2012-01-24 14:02 PST, Mario Sanchez Prada
cfleizach: review+
Joanmarie Diggs
Comment 1 2011-11-30 04:47:32 PST
Created attachment 117170 [details] test script
Mario Sanchez Prada
Comment 2 2012-01-17 03:01:48 PST
This bug depends on bug 72382, which fortunately has a patch pending on review at the time of this writing.
Mario Sanchez Prada
Comment 3 2012-01-17 04:54:43 PST
Created attachment 122749 [details] Patch proposal
Mario Sanchez Prada
Comment 4 2012-01-24 14:02:19 PST
Created attachment 123803 [details] Patch proposal Updating the patch after the refactor done for fixing bug 76783
chris fleizach
Comment 5 2012-02-06 19:33:49 PST
Comment on attachment 123803 [details] Patch proposal r=me
Mario Sanchez Prada
Comment 6 2012-02-08 07:38:35 PST
Note You need to log in before you can comment on or make changes to this bug.