[Gtk] atk_text_get_text_at_offset() fails to provide the correct line for list items whose text wraps https://bugs.webkit.org/show_bug.cgi?id=73431

Reviewed by Chris Fleizach.

Source/WebCore:

Don't replace item's markers with the objectReplacementCharacter
character, as they will be treated in an special way later on.

* accessibility/gtk/WebKitAccessibleInterfaceText.cpp:
(textForRenderer): Don't append the objectReplacementCharacter
character for list item's markers.

Source/WebKit/gtk:

Updated unit test to check text wrapping accross different lines
inside list items with bullet markers.

* tests/testatk.c:
(testWebkitAtkGetTextAtOffsetWithSpecialCharacters): Updated test.

Canonical link: https://commits.webkit.org/94998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107086 268f45cc-cd09-0410-ab3c-d52691b4dbfc